--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,8 +12,15 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "extends": ["airbnb", "plugin:import/recommended", "plugin:@typescript-eslint/recommended", "prettier"],
+  "extends": [
+    "airbnb",
+    "airbnb-typescript",
+    "plugin:import/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
+  ],
   "rules": {
+    "arrow-body-style": "off", // 화살표 함수 중괄호 적용 혹은 생략 둘 다 가능
     "comma-dangle": "off", // trailing comma 생략 가능
     "consistent-return": "off", // 함수에 return문 생략 가능
     "func-names": "off", // 익명 함수 사용 가능
@@ -54,6 +61,7 @@
     "import/prefer-default-export": "off", // 모듈에 export를 한 번만 사용해도 default export를 하지 않아도 됨
     "jsx-a11y/click-events-have-key-events": ["off"], // onKeyDown, onKeyUp, onKeyPress 없이 onClick을 사용해도 됨
     "jsx-a11y/control-has-associated-label": ["off"], // button 등의 interactive element를 텍스트 라벨 없이 사용할 수 있음
+    "jsx-a11y/no-static-element-interactions": ["off"], // span,div 등의 non-interactive element를 role 없이 사용할 수 있음
     "jsx-a11y/label-has-associated-control": ["off"], // label과 input을 연관시키지(htmlFor - id) 않아도 됨
     "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx", ".ts", ".tsx"] }], // jsx 파일 확장자 제한
     "react/jsx-no-useless-fragment": ["off"], // 무의미한(자식 요소가 1개 또는 fragment가 html의 자식인 경우) fragment 사용 가능
