--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,9 @@
     "node": true
   },
   "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
   "parserOptions": {
+    "project": ["./tsconfig.json"],
     "ecmaFeatures": {
       "jsx": true
     },
@@ -52,6 +54,7 @@
     ],
     "no-unused-vars": ["off"], // 사용하지 않는 변수 선언 가능
     "no-use-before-define": "off", // 변수가 선언문보다 더 위에 있어도 사용 가능
+    "@typescript-eslint/no-use-before-define": "off", // 변수가 선언문보다 더 위에 있어도 사용 가능
     "prefer-arrow-callback": "error", // 콜백 함수는 반드시 화살표 함수로 작성
     "prefer-template": "off", // 문자열을 문자열 연결 연산자(+)로 연결 가능
     "require-await": "error", // 내부에 await 표현식 없이 async를 사용할 수 없음,
@@ -69,6 +72,7 @@
     "react/require-default-props": "off", // defaultProps를 지정하지 않아도 됨
     "react/prop-types": ["off"], // propTypes 설정하지 않아도 됨
     "react/function-component-definition": [
+      2,
       {
         "namedComponents": "arrow-function"
       }
