--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,9 +7,9 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
-      "jsx": true,
-      "project": ["path/to/your/tsconfig/file"]
+      "jsx": true
     },
+    "project": ["./tsconfig.json"],
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
@@ -52,6 +52,7 @@
       }
     ],
     "no-unused-vars": ["off"], // 사용하지 않는 변수 선언 가능
+    "@typescript-eslint/no-use-before-define": "off",
     "no-use-before-define": "off", // 변수가 선언문보다 더 위에 있어도 사용 가능
     "prefer-arrow-callback": "error", // 콜백 함수는 반드시 화살표 함수로 작성
     "prefer-template": "off", // 문자열을 문자열 연결 연산자(+)로 연결 가능
@@ -70,6 +71,7 @@
     "react/require-default-props": "off", // defaultProps를 지정하지 않아도 됨
     "react/prop-types": ["off"], // propTypes 설정하지 않아도 됨
     "react/function-component-definition": [
+      "error",
       {
         "namedComponents": "arrow-function"
       }
