--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,12 +10,15 @@
       "jsx": true
     },
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": ["./tsconfig.json"]
   },
   "extends": [
     "airbnb",
     "airbnb-typescript",
     "plugin:import/recommended",
+    "plugin:import/typescript",
+    "plugin:react/jsx-runtime",
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
@@ -69,6 +72,7 @@
     "react/require-default-props": "off", // defaultProps를 지정하지 않아도 됨
     "react/prop-types": ["off"], // propTypes 설정하지 않아도 됨
     "react/function-component-definition": [
+      "error",
       {
         "namedComponents": "arrow-function"
       }
