--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
       "jsx": true
     },
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": ["./tsconfig.json"]
   },
   "extends": [
     "airbnb",
