✨ Feat :  Focus 여부를 처리하는 전역 Context 구성

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -75,7 +75,8 @@
       {
         "namedComponents": "arrow-function"
       }
-    ]
+    ],
+    "@typescript-eslint/no-non-null-assertion": "off"
   },
   "settings": {
     "import/resolver": {
