--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
+    "project": ["./tsconfig.json"],
     "ecmaFeatures": {
       "jsx": true
     },
@@ -57,6 +58,7 @@
     "require-await": "error", // 내부에 await 표현식 없이 async를 사용할 수 없음,
     "@typescript-eslint/no-var-requires": "off",
     "import/extensions": "off", // import 할 때 파일 확장자 작성하지 않아도 됨
+    "@typescript-eslint/no-use-before-define": "off",
     "import/no-extraneous-dependencies": "off", // package.json에 명시되지 않은 외부 모듈 import 가능
     "import/prefer-default-export": "off", // 모듈에 export를 한 번만 사용해도 default export를 하지 않아도 됨
     "jsx-a11y/click-events-have-key-events": ["off"], // onKeyDown, onKeyUp, onKeyPress 없이 onClick을 사용해도 됨
@@ -69,6 +71,7 @@
     "react/require-default-props": "off", // defaultProps를 지정하지 않아도 됨
     "react/prop-types": ["off"], // propTypes 설정하지 않아도 됨
     "react/function-component-definition": [
+      "error",
       {
         "namedComponents": "arrow-function"
       }
