--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/styled-components": "^5.1.26",
     "axios": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
+    "styled-normalize": "^8.0.7",
     "typescript": "^4.9.4"
   },
   "scripts": {
