--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "allowJs": true, // js 코드 허용
     "jsx": "preserve", // tsx -> jsx 어떻게 컴파일 할건지
     "esModuleInterop": true, // require 문법과 import 문법 호환
-    "noImplicitReturns": true // 함수 return 없으면 에러
+    "noImplicitReturns": true, // 함수 return 없으면 에러
+    "moduleResolution": "node" // 모듈 해석 방식
   },
   "include": ["src/*"], // ts 적용할 경로
   "exclude": ["node_modules"] // ts 적용하지 않을 폴더
